--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/lumen-framework": "5.6.*",
         "vlucas/phpdotenv": "~2.2",
         "wn/lumen-generators": "^1.3",
-        "bkwld/laravel-pug": "^1.6"
+        "bkwld/laravel-pug": "^1.6",
+        "openpay/sdk": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
